Set category and visibility of notifications. #241

--- a/briar-android/res/layout/invitation_bluetooth_invitation_code.xml
+++ b/briar-android/res/layout/invitation_bluetooth_invitation_code.xml
@@ -68,6 +68,7 @@
 			style="?android:attr/progressBarStyleLarge"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_medium"
 			android:indeterminate="true"
 			android:layout_below="@+id/waitingView"
 			android:layout_centerHorizontal="true"
