--- a/briar-android/res/layout/dropdown_author.xml
+++ b/briar-android/res/layout/dropdown_author.xml
@@ -2,6 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:gravity="center_vertical">
@@ -9,14 +10,16 @@
 	<de.hdodenhof.circleimageview.CircleImageView
 		android:id="@+id/avatarView"
 		android:layout_width="@dimen/dropdown_picture_size"
-		android:layout_height="@dimen/dropdown_picture_size"/>
+		android:layout_height="@dimen/dropdown_picture_size"
+		android:layout_margin="@dimen/margin_small"
+		app:civ_border_width="@dimen/avatar_border_width"
+		app:civ_border_color="@color/briar_text_primary"/>
 
 	<TextView
 		android:id="@+id/nameView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="@dimen/margin_medium"
-		android:layout_marginStart="@dimen/margin_medium"
+		android:layout_margin="@dimen/margin_small"
 		android:ellipsize="end"
 		android:singleLine="true"
 		android:textSize="@dimen/text_size_medium"
