--- a/briar-android/res/layout/list_item_msg_in.xml
+++ b/briar-android/res/layout/list_item_msg_in.xml
@@ -2,6 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
@@ -16,7 +17,8 @@
 		android:layout_height="@dimen/listitem_picture_size"
 		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 		android:layout_marginStart="@dimen/listitem_horizontal_margin"
-		/>
+		app:civ_border_width="@dimen/avatar_border_width"
+		app:civ_border_color="@color/briar_text_primary"/>
 
 	<RelativeLayout
 		android:id="@+id/msgLayout"
