Reverted text colour to black.
@color/briar_text_primary is used in a lot of places other than the settings screen - if we want to use grey text in the settings screen we'll need to find another way.

Also fixed some misspelled resource names and included the colours from the Briar palette in color.xml.

--- a/briar-android/res/layout/navigation_menu.xml
+++ b/briar-android/res/layout/navigation_menu.xml
@@ -43,7 +43,7 @@
 			<View
 				style="@style/Divider"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/nav_seperator_height"
+				android:layout_height="@dimen/nav_separator_height"
 				android:layout_marginLeft="@dimen/margin_large"/>
 
 			<android.support.v7.widget.AppCompatButton
@@ -58,7 +58,7 @@
 			<View
 				style="@style/Divider"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/margin_seperator"
+				android:layout_height="@dimen/margin_separator"
 				android:layout_marginLeft="@dimen/margin_large"/>
 
 			<android.support.v7.widget.AppCompatButton
@@ -73,7 +73,7 @@
 			<View
 				style="@style/Divider"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/margin_seperator"
+				android:layout_height="@dimen/margin_separator"
 				android:layout_marginLeft="@dimen/margin_large"/>
 
 			<android.support.v7.widget.AppCompatButton
@@ -88,7 +88,7 @@
 			<View
 				style="@style/Divider"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/margin_seperator"
+				android:layout_height="@dimen/margin_separator"
 				android:layout_marginLeft="@dimen/margin_large"/>
 
 			<FrameLayout
