--- a/briar-android/res/values/dimens.xml
+++ b/briar-android/res/values/dimens.xml
@@ -4,7 +4,7 @@
 	<dimen name="margin_activity_horizontal">16dp</dimen>
 	<dimen name="margin_activity_vertical">16dp</dimen>
 
-	<dimen name="margin_seperator">1dp</dimen>
+	<dimen name="margin_separator">1dp</dimen>
 	<dimen name="margin_tiny">2dp</dimen>
 	<dimen name="margin_small">4dp</dimen>
 	<dimen name="margin_medium">8dp</dimen>
@@ -18,7 +18,7 @@
 	<dimen name="text_size_large">20sp</dimen>
 	<dimen name="text_size_xlarge">34sp</dimen>
 	<dimen name="nav_drawer_width">300dp</dimen>
-	<dimen name="nav_seperator_height">1dp</dimen>
+	<dimen name="nav_separator_height">1dp</dimen>
 
 	<dimen name="listitem_horizontal_margin">16dp</dimen>
 	<dimen name="listitem_text_left_margin">72dp</dimen>
