WIP: Converts the splash screen to XML format
Removes all programatic calls that modify the layout and uses the XML
resource instead.

--- a/briar-android/res/values/dimens.xml
+++ b/briar-android/res/values/dimens.xml
@@ -10,6 +10,7 @@
 	<dimen name="margin_medium">8dp</dimen>
 	<dimen name="margin_large">16dp</dimen>
 	<dimen name="margin_xlarge">32dp</dimen>
+	<dimen name="margin_xxlarge">64dp</dimen>
 
 	<!-- v2 dimens -->
 	<dimen name="text_size_tiny">12sp</dimen>
