First part of BQP UI improvements.
Includes parallel improvements to Bluetooth key exchange UI.

--- a/briar-android/res/drawable/bluetooth.xml
+++ b/briar-android/res/drawable/bluetooth.xml
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+﻿<vector xmlns:android="http://schemas.android.com/apk/res/android"
 	android:width="499.24373dp"
 	android:height="175.49413dp"
 	android:viewportWidth="499.24373"
