--- a/briar-android/res/layout/fragment_keyagreement_id.xml
+++ b/briar-android/res/layout/fragment_keyagreement_id.xml
@@ -26,8 +26,8 @@
 			android:id="@+id/spinner"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:background="@drawable/spinner_border"
 			android:layout_marginTop="@dimen/margin_medium"
+			android:background="@drawable/spinner_border"
 			android:spinnerMode="dropdown"/>
 
 		<ImageView
@@ -37,7 +37,7 @@
 			android:layout_marginTop="@dimen/margin_xlarge"
 			android:adjustViewBounds="true"
 			android:scaleType="fitCenter"
-			android:src="@drawable/bluetooth"/>
+			android:src="@drawable/qr_code_intro"/>
 
 		<TextView
 			android:id="@+id/faceToFaceView"
@@ -55,6 +55,7 @@
 			android:layout_gravity="center_horizontal"
 			android:layout_marginTop="@dimen/margin_medium"
 			android:text="@string/continue_button"/>
+
 	</LinearLayout>
 
 </ScrollView>
