--- a/briar-android/res/layout/fragment_keyagreement_qr.xml
+++ b/briar-android/res/layout/fragment_keyagreement_qr.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	android:id="@+id/qr_layout"
+<FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:weightSum="2">
+	android:layout_height="match_parent">
 
-	<FrameLayout
+	<org.briarproject.android.util.CameraView
+		android:id="@+id/camera_view"
 		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1"
-		android:background="@android:color/black"
-		android:gravity="center">
+		android:layout_height="match_parent"/>
 
-		<RelativeLayout
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<FrameLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@android:color/background_light">
+			android:layout_height="0dp"
+			android:layout_weight="1">
 
 			<LinearLayout
+				android:id="@+id/status_container"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_centerInParent="true"
+				android:layout_height="match_parent"
+				android:background="@android:color/background_light"
 				android:gravity="center"
 				android:orientation="vertical"
-				android:padding="@dimen/margin_medium">
+				android:padding="@dimen/margin_medium"
+				android:visibility="invisible">
 
 				<ProgressBar
 					android:layout_width="wrap_content"
@@ -41,19 +43,25 @@
 					android:paddingTop="@dimen/margin_large"
 					tools:text="Connection failed"/>
 			</LinearLayout>
-		</RelativeLayout>
+		</FrameLayout>
 
-		<org.briarproject.android.util.CameraView
-			android:id="@+id/camera_view"
+		<RelativeLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"/>
-	</FrameLayout>
+			android:layout_height="0dp"
+			android:layout_weight="1"
+			android:background="@android:color/white">
 
-	<ImageView
-		android:id="@+id/qr_code"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1"
-		android:scaleType="fitCenter"/>
+			<ProgressBar
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerInParent="true"
+				android:paddingTop="@dimen/margin_large"/>
 
-</LinearLayout>
+			<ImageView
+				android:id="@+id/qr_code"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:scaleType="fitCenter"/>
+		</RelativeLayout>
+	</LinearLayout>
+</FrameLayout>
