--- a/briar-android/res/layout/list_item_introduction_in.xml
+++ b/briar-android/res/layout/list_item_introduction_in.xml
@@ -34,8 +34,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
-			android:layout_alignEnd="@+id/acceptButton"
-			android:layout_alignRight="@+id/acceptButton"
+			android:layout_alignEnd="@+id/introductionText"
+			android:layout_alignRight="@+id/introductionText"
 			android:layout_below="@+id/acceptButton"
 			android:textColor="@color/private_message_date"
 			android:textSize="@dimen/text_size_tiny"
