--- a/briar-android/res/values/styles.xml
+++ b/briar-android/res/values/styles.xml
@@ -99,7 +99,7 @@
 		<item name="android:layout_height">1px</item>
 	</style>
 
-	<style name="Divider.ContactListDevider" parent="Divider">
+	<style name="Divider.ContactList" parent="Divider">
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">2dp</item>
 		<item name="android:layout_marginLeft">@dimen/margin_large</item>
