--- a/briar-android/res/layout/list_item_crash.xml
+++ b/briar-android/res/layout/list_item_crash.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<TextView
-		android:id="@+id/title"
-		android:layout_width="wrap_content"
+	<LinearLayout
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="@dimen/margin_small"
-		android:textSize="@dimen/text_size_large"/>
+		android:orientation="horizontal">
+
+		<CheckBox
+			android:id="@+id/include_in_report"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
+
+		<TextView
+			android:id="@+id/title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/margin_small"
+			android:textSize="@dimen/text_size_large"
+			tools:text="Crash log entry title"/>
+	</LinearLayout>
 
 	<TextView
 		android:id="@+id/content"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="@dimen/margin_medium"/>
+		android:layout_marginBottom="@dimen/margin_medium"
+		tools:text="Crash log entry value"/>
 
 </LinearLayout>
