--- a/briar-android/res/xml/settings_debug.xml
+++ b/briar-android/res/xml/settings_debug.xml
@@ -14,6 +14,10 @@
 
 		</Preference>
 
+		<Preference
+			android:key="send_feedback"
+			android:title="Send feedback"/>
+
 	</PreferenceCategory>
 
 </PreferenceScreen>
