--- a/briar-android/res/layout/activity_crash.xml
+++ b/briar-android/res/layout/activity_crash.xml
@@ -24,6 +24,7 @@
 
 	<ProgressBar
 		android:id="@+id/progress_wheel"
+		style="?android:attr/progressBarStyleLarge"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
