--- a/briar-android/res/values/dimens.xml
+++ b/briar-android/res/values/dimens.xml
@@ -41,5 +41,8 @@
 	<dimen name="message_bubble_margin_tail">14dp</dimen>
 	<dimen name="message_bubble_margin_non_tail">51dp</dimen>
 	<dimen name="message_bubble_timestamp_margin">15dp</dimen>
+	<dimen name="forum_nested_line_width">2dp</dimen>
+	<dimen name="forum_nested_indicator">24dp</dimen>
+	<dimen name="forum_avatar_size">20dp</dimen>
 
 </resources>
