--- a/briar-android/res/values/styles.xml
+++ b/briar-android/res/values/styles.xml
@@ -140,4 +140,9 @@
 		<item name="android:layout_marginBottom">16dp</item>
 	</style>
 
+	<style name="DiscussionLevelIndicator">
+		<item name="android:layout_marginLeft">4dp</item>
+		<item name="android:background">?android:attr/listDivider</item>
+	</style>
+
 </resources>
