Add Snackbar and Toolbar Button to Forum List
This commit is a small change that replaces the custom UI elements in
the forum list with a Snackbar and an Toolbar menu.

Addresses one part (2b) of #305

--- a/briar-android/res/layout/activity_with_loading.xml
+++ b/briar-android/res/layout/activity_with_loading.xml
@@ -22,15 +22,13 @@
 		<FrameLayout
 			android:id="@+id/content_fragment"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@color/default_background"/>
+			android:layout_height="match_parent"/>
 
 		<RelativeLayout
 			android:id="@+id/container_progress"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_gravity="center"
-			android:background="@color/default_background"
 			android:visibility="invisible"
 			tools:visibility="visible">
 
