Move forum removal action from long press menu to action bar
part of UI changes for #305

--- a/briar-android/res/menu/forum_actions.xml
+++ b/briar-android/res/menu/forum_actions.xml
@@ -15,4 +15,10 @@
 		android:title="@string/forum_share_button"
 		app:showAsAction="ifRoom"/>
 
+	<item
+		android:id="@+id/action_forum_delete"
+		android:icon="@drawable/social_remove_person"
+		android:title="@string/forum_leave"
+		app:showAsAction="never"/>
+
 </menu>
